# New-Cpp-Repo

./: .gitignore  CMakeLists.txt  Jenkinsfile  Jenkinsfile.unified  PROJECT_AND_TEST_PLAN.md  README.md  TESTING.md
Client/: clientProgram.cpp
Client/Headers/: Cash.h  Client.h  Customer.h  Person.h
Server/: serverProgram.cpp
Server/Headers/: Cash.h  Customer.h  Thread.h
scripts/: build_and_test.ps1
tests/: CMakeLists.txt
tests/common/: MockClient.h  MockThread.h  stdin_redirect.h  test_helpers.h  test_runtime.cpp  test_workspace.h
tests/testClient/Headers/: test_Admin.cpp  test_Admin.h  test_Cash.cpp  test_Client.cpp  test_Customer.cpp  test_Customer.h  test_Customer_flows.cpp  test_Employee.cpp  test_Employee.h  test_Employee_flows.cpp  test_Person.cpp  test_Person.h  test_Person_flows.cpp
tests/testServer/Headers/: test_Admin.cpp  test_Admin.h  test_Cash.cpp  test_Complaint_Base.cpp  test_Complaint_C.cpp  test_Complaint_E.cpp  test_Customer.cpp  test_Employee.cpp  test_Person.cpp  test_Person.h  test_Person_flows.cpp  test_Server.cpp  test_Thread.cpp
